--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
 <link rel="stylesheet" media="screen" type="text/css" href="style.css" />
-  <title></title>
+  <title>Exercice1</title>
 </head>
 <body>
+  <SCRIPT LANGUAGE = "JavaScript">
+<!--
+alert ("Bonjour, jeune cavalier du bois de Paris!")
+-->
+</SCRIPT>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-auto">
